<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_ascensores">

    <fragment
        android:id="@+id/navigation_ascensores"
        android:name="co.edu.javeriana.innovacion.skyjaveriana.ui.ascensores.AscnensoresFragment"
        android:label="@string/title_ascnsores"
        tools:layout="@layout/fragment_ascensores" />

    <fragment
        android:id="@+id/navigation_ruta"
        android:name="co.edu.javeriana.innovacion.skyjaveriana.ui.ruta.RutaFragment"
        android:label="@string/title_ruta"
        tools:layout="@layout/fragment_ruta" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="co.edu.javeriana.innovacion.skyjaveriana.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>