<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_register.Register">

    <TextView
        android:id="@+id/txt_irRegistroEmpresa_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_irARegistroEmpresa"
        android:textColor="@color/green_principal"
        app:layout_constraintBottom_toTopOf="@+id/ic_bicicleta_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_registrarse_register"
        app:layout_constraintVertical_bias="0.461" />

    <ProgressBar
        android:id="@+id/progressBar_registrer"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:progressTint="@color/green_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/title_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="sans-serif"
        android:text="@string/title_register"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/ic_bicicleta_register"
        android:layout_width="152dp"
        android:layout_height="153dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:background="@drawable/ic_baseline_pedal_bike_24"
        android:backgroundTint="@color/green_principal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etxt_nombre_register"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:backgroundTint="#D1CDCD"
        android:ems="10"
        android:hint="@string/input_nombre"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_register" />

    <EditText
        android:id="@+id/etxt_email_register"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:backgroundTint="#D1CDCD"
        android:ems="10"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxt_nombre_register" />

    <EditText
        android:id="@+id/etxt_pass_register"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:backgroundTint="#D1CDCD"
        android:ems="10"
        android:hint="@string/input_pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxt_email_register" />

    <Button
        android:id="@+id/btn_registrarse_register"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/green_principal"
        android:text="@string/but_registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ch_promo_register" />

    <CheckBox
        android:id="@+id/ch_tyc_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/check_tyc"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxt_pass_register" />

    <CheckBox
        android:id="@+id/ch_promo_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/check_promociones"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ch_tyc_register" />

    <TextView
        android:id="@+id/txt_irLogin_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/but_ir_login"
        android:textColor="@color/green_principal"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/title_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/title_register"
        app:layout_constraintTop_toTopOf="@+id/title_register" />


</androidx.constraintlayout.widget.ConstraintLayout>